# TMS_Flask

./: crud.py  main.py  models.py  pyproject.toml
static/: main.css
templates/: create_post.html  home.html  note_view.html
